sample/error/e01902-i.asn
E01902-I DEFINITIONS ::=
BEGIN
    Enum1 ::= ENUMERATED {a(0), a(1)} -- E01902-I
END
